# esp-idf

./: .gitmodules
components/anjay_lwm2m/: CMakeLists.txt  anjay.c  component.mk
components/duktape/: CMakeLists.txt
